--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.0.0",
+        "aloha/twilio": "^4.0",
         "barryvdh/laravel-cors": "^0.11.3",
         "fideloper/proxy": "^4.0",
         "jrm2k6/cloudder": "^0.6.0",
+        "laravel-notification-channels/twilio": "^2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "twilio/sdk": "^5.34",
         "tymon/jwt-auth": "^1.0.0-rc.2"
     },
     "require-dev": {
